fix main reader spacing

--- a/src/components/structure/reader/styles.scss
+++ b/src/components/structure/reader/styles.scss
@@ -3,7 +3,7 @@
 .reader-container {
   max-width: 900px;
   margin: 0 auto;
-  min-height: calc(100vh - 238px - 118px);
+  min-height: calc(100vh - 237px - 118px);
   padding: 0 40px;
 }
 
@@ -41,14 +41,14 @@
 
 @media (max-width: 767px) {
   .reader-container {
-    min-height: calc(100vh - 179px - 118px);
+    min-height: calc(100vh - 178px - 118px);
     padding: 0 40px;
   }
 }
 
 @media (max-width: 479px) {
   .reader-container {
-    min-height: calc(100vh - 141px - 118px);
+    min-height: calc(100vh - 140px - 118px);
     padding: 0 20px;
   }
 }
